--- a/Author_/Author_ViewController.xib
+++ b/Author_/Author_ViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -15,16 +15,20 @@
                 <outlet property="collectionFilter" destination="4zJ-jQ-ErX" id="BXQ-AQ-ZfD"/>
                 <outlet property="collectionView" destination="135-H4-Ces" id="ey9-Tl-lqe"/>
                 <outlet property="filterButton" destination="vXG-9B-Wd7" id="W74-B1-SYg"/>
+                <outlet property="searchBg" destination="JGf-wJ-xkL" id="ot5-zC-5Ed"/>
+                <outlet property="searchBtn" destination="6QU-N5-vbc" id="9Vx-D2-kny"/>
+                <outlet property="searchButton" destination="G3s-w6-4zp" id="B2x-9J-uc2"/>
+                <outlet property="searchView" destination="Lcd-lY-gSU" id="SVt-hx-cRl"/>
                 <outlet property="view" destination="qhB-tG-fw8" id="fau-lr-M6b"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="qhB-tG-fw8">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dS3-9e-pDR">
-                    <rect key="frame" x="0.0" y="44" width="414" height="64"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2e-by-0OV">
                             <rect key="frame" x="8" y="10" width="44" height="44"/>
@@ -37,8 +41,8 @@
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="1uk-ih-9DT"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Các tác giả" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
-                            <rect key="frame" x="159" y="22" width="96.5" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tác giả" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
+                            <rect key="frame" x="129.5" y="22" width="61" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="3QV-z4-mrO"/>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="zOZ-Cz-Rfs"/>
@@ -47,19 +51,72 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JGf-wJ-xkL">
+                            <rect key="frame" x="60" y="15" width="200" height="38"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="6QU-N5-vbc">
+                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="25" id="bbO-IA-Zkj"/>
+                                        <constraint firstAttribute="height" constant="25" id="l78-SP-lbK"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="38" id="2Ng-s5-ywa"/>
+                                <constraint firstAttribute="trailing" secondItem="6QU-N5-vbc" secondAttribute="trailing" constant="8" id="64Z-L5-Q2y"/>
+                                <constraint firstItem="6QU-N5-vbc" firstAttribute="centerY" secondItem="JGf-wJ-xkL" secondAttribute="centerY" id="n85-Qp-qO4"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="20.5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lcd-lY-gSU">
+                            <rect key="frame" x="68" y="17" width="155" height="34"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="34" id="6CF-Lo-gu6"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="jIP-JA-6K5"/>
+                            </connections>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3s-w6-4zp">
+                            <rect key="frame" x="268" y="12" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="oVh-hu-zgz"/>
+                                <constraint firstAttribute="width" constant="44" id="xfo-Jk-jKI"/>
+                            </constraints>
+                            <state key="normal" image="ic_search"/>
+                            <connections>
+                                <action selector="didPressSearchWithSender:" destination="-1" eventType="touchUpInside" id="LdS-qD-KC3"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <viewLayoutGuide key="safeArea" id="uB8-3x-Sb7"/>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="uB8-3x-Sb7" firstAttribute="trailing" secondItem="G3s-w6-4zp" secondAttribute="trailing" constant="8" id="Csx-8U-qHm"/>
                         <constraint firstItem="q2e-by-0OV" firstAttribute="leading" secondItem="uB8-3x-Sb7" secondAttribute="leading" constant="8" id="IMk-XR-ogO"/>
+                        <constraint firstItem="G3s-w6-4zp" firstAttribute="leading" secondItem="JGf-wJ-xkL" secondAttribute="trailing" constant="8" symbolic="YES" id="IMu-k4-QI7"/>
+                        <constraint firstItem="JGf-wJ-xkL" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="15" id="KNL-4d-m5D"/>
                         <constraint firstItem="nQd-hY-D9d" firstAttribute="centerX" secondItem="dS3-9e-pDR" secondAttribute="centerX" id="WLB-M8-22v"/>
                         <constraint firstItem="q2e-by-0OV" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="10" id="ZX3-CI-NPQ"/>
                         <constraint firstAttribute="height" constant="64" id="avo-PJ-2fW"/>
+                        <constraint firstItem="Lcd-lY-gSU" firstAttribute="leading" secondItem="q2e-by-0OV" secondAttribute="trailing" constant="16" id="geh-tp-iQh"/>
                         <constraint firstItem="nQd-hY-D9d" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="22" id="iyr-qO-qhM"/>
+                        <constraint firstItem="Lcd-lY-gSU" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="17" id="l1k-fH-HqC"/>
+                        <constraint firstItem="G3s-w6-4zp" firstAttribute="top" secondItem="uB8-3x-Sb7" secondAttribute="top" constant="12" id="lMI-PF-TlQ"/>
+                        <constraint firstItem="G3s-w6-4zp" firstAttribute="leading" secondItem="Lcd-lY-gSU" secondAttribute="trailing" constant="45" id="mzS-ZY-ubt"/>
+                        <constraint firstItem="JGf-wJ-xkL" firstAttribute="leading" secondItem="q2e-by-0OV" secondAttribute="trailing" constant="8" symbolic="YES" id="uan-LT-1J4"/>
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="135-H4-Ces">
-                    <rect key="frame" x="10" y="167" width="394" height="685"/>
+                    <rect key="frame" x="10" y="123" width="300" height="435"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="coh-DV-6Fg">
                         <size key="itemSize" width="50" height="50"/>
@@ -73,27 +130,27 @@
                     </connections>
                 </collectionView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_menu_down" translatesAutoresizingMaskIntoConstraints="NO" id="x9y-EI-cWG">
-                    <rect key="frame" x="361" y="116" width="43" height="43"/>
+                    <rect key="frame" x="267" y="72" width="43" height="43"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="43" id="Nl4-eW-RY5"/>
                         <constraint firstAttribute="height" constant="43" id="Qsh-Sm-ltT"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXG-9B-Wd7">
-                    <rect key="frame" x="10" y="116" width="394" height="43"/>
+                    <rect key="frame" x="10" y="72" width="300" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="Ljy-eT-tVw"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                     <state key="normal" title="TẤT CẢ">
-                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="titleColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="didPressFilter" destination="-1" eventType="touchUpInside" id="F61-Eu-Yd7"/>
                     </connections>
                 </button>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4zJ-jQ-ErX">
-                    <rect key="frame" x="10" y="167" width="394" height="685"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4zJ-jQ-ErX">
+                    <rect key="frame" x="10" y="123" width="300" height="435"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Pcg-mL-fpd">
                         <size key="itemSize" width="50" height="50"/>
@@ -132,6 +189,7 @@
     </objects>
     <resources>
         <image name="ic_menu_down" width="33" height="33"/>
+        <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_arrow_l_white" width="33" height="33"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
