--- a/Account_/Bank_Cell.xib
+++ b/Account_/Bank_Cell.xib
@@ -9,42 +9,55 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Bank_Cell" rowHeight="65" id="bic-u8-gBb">
-            <rect key="frame" x="0.0" y="0.0" width="443" height="65"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Bank_Cell" rowHeight="74" id="bic-u8-gBb">
+            <rect key="frame" x="0.0" y="0.0" width="443" height="74"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bic-u8-gBb" id="xvx-WQ-G1m">
-                <rect key="frame" x="0.0" y="0.0" width="443" height="65"/>
+                <rect key="frame" x="0.0" y="0.0" width="443" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_select" translatesAutoresizingMaskIntoConstraints="NO" id="aJl-uO-G1T">
-                        <rect key="frame" x="12" y="15" width="35" height="35"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_payment_square" translatesAutoresizingMaskIntoConstraints="NO" id="aJl-uO-G1T">
+                        <rect key="frame" x="8" y="8" width="58" height="58"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="35" id="O63-Xe-LAu"/>
-                            <constraint firstAttribute="height" constant="35" id="vgR-92-pzX"/>
+                            <constraint firstAttribute="height" constant="58" id="CJe-VB-0fg"/>
+                            <constraint firstAttribute="width" constant="58" id="kw2-lg-fnE"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Te-Bp-dvO">
-                        <rect key="frame" x="62" y="15" width="361" height="35"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chọn phương thức" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Te-Bp-dvO">
+                        <rect key="frame" x="83" y="15" width="311" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="SEh-fV-3nX"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_aright" translatesAutoresizingMaskIntoConstraints="NO" id="PAk-HO-yUy">
+                        <rect key="frame" x="402" y="20" width="32" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="8tx-F1-k6Y"/>
+                            <constraint firstAttribute="width" constant="32" id="y5U-MB-iCx"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="3Te-Bp-dvO" firstAttribute="top" secondItem="xvx-WQ-G1m" secondAttribute="top" constant="15" id="0mc-uf-kPS"/>
-                    <constraint firstItem="aJl-uO-G1T" firstAttribute="leading" secondItem="xvx-WQ-G1m" secondAttribute="leading" constant="12" id="A0v-4A-daM"/>
-                    <constraint firstItem="aJl-uO-G1T" firstAttribute="top" secondItem="xvx-WQ-G1m" secondAttribute="top" constant="15" id="Lof-6F-MjZ"/>
-                    <constraint firstAttribute="trailing" secondItem="3Te-Bp-dvO" secondAttribute="trailing" constant="20" symbolic="YES" id="PNX-nF-WWc"/>
-                    <constraint firstAttribute="bottom" secondItem="3Te-Bp-dvO" secondAttribute="bottom" constant="15" id="RzM-CR-fa3"/>
-                    <constraint firstItem="3Te-Bp-dvO" firstAttribute="leading" secondItem="aJl-uO-G1T" secondAttribute="trailing" constant="15" id="dPg-nd-Ika"/>
+                    <constraint firstItem="PAk-HO-yUy" firstAttribute="leading" secondItem="3Te-Bp-dvO" secondAttribute="trailing" constant="8" symbolic="YES" id="1OX-Z8-Ih4"/>
+                    <constraint firstItem="3Te-Bp-dvO" firstAttribute="top" secondItem="xvx-WQ-G1m" secondAttribute="top" constant="15" id="2TO-we-wq9"/>
+                    <constraint firstItem="aJl-uO-G1T" firstAttribute="top" secondItem="xvx-WQ-G1m" secondAttribute="top" constant="8" id="2lK-D1-Nyj"/>
+                    <constraint firstAttribute="trailing" secondItem="PAk-HO-yUy" secondAttribute="trailing" constant="9" id="8Tl-9K-jjP"/>
+                    <constraint firstAttribute="bottom" secondItem="3Te-Bp-dvO" secondAttribute="bottom" constant="14" id="Jsi-Dv-TeB"/>
+                    <constraint firstItem="aJl-uO-G1T" firstAttribute="leading" secondItem="xvx-WQ-G1m" secondAttribute="leading" constant="8" id="hQY-mk-Yte"/>
+                    <constraint firstItem="3Te-Bp-dvO" firstAttribute="leading" secondItem="aJl-uO-G1T" secondAttribute="trailing" constant="17" id="qQJ-Ke-6cW"/>
+                    <constraint firstItem="PAk-HO-yUy" firstAttribute="top" secondItem="xvx-WQ-G1m" secondAttribute="top" constant="20" symbolic="YES" id="sXw-UX-yiJ"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <point key="canvasLocation" x="-73.188405797101453" y="-8.3705357142857135"/>
+            <point key="canvasLocation" x="-73.188405797101453" y="-5.3571428571428568"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ico_select" width="33" height="33"/>
+        <image name="ico_aright" width="17" height="34.5"/>
+        <image name="icon_payment_square" width="66.5" height="68"/>
     </resources>
 </document>
