--- a/Tabbar_/Second_Tab_ViewController.xib
+++ b/Tabbar_/Second_Tab_ViewController.xib
@@ -44,6 +44,9 @@
                                 <constraint firstAttribute="height" constant="44" id="gHU-ua-4aB"/>
                             </constraints>
                             <state key="normal" image="ico_vip"/>
+                            <connections>
+                                <action selector="didPressBuy:" destination="-1" eventType="touchUpInside" id="tu1-Ya-jQA"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HJq-nI-cCu">
                             <rect key="frame" x="60" y="13" width="200" height="38"/>
