--- a/Tabbar_/Third_Tab_New_ViewController.xib
+++ b/Tabbar_/Third_Tab_New_ViewController.xib
@@ -44,6 +44,9 @@
                                 <constraint firstAttribute="height" constant="44" id="j76-ke-Bjd"/>
                             </constraints>
                             <state key="normal" image="ico_vip"/>
+                            <connections>
+                                <action selector="didPressBuy:" destination="-1" eventType="touchUpInside" id="vkY-Ml-fyq"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4c-3n-YtP">
                             <rect key="frame" x="60" y="13" width="200" height="38"/>
