--- a/Account_/User_Infor_ViewController.xib
+++ b/Account_/User_Infor_ViewController.xib
@@ -13,7 +13,11 @@
             <connections>
                 <outlet property="account" destination="OVg-p2-Vdw" id="c2T-KN-ccW"/>
                 <outlet property="avatar" destination="VWS-9P-tOy" id="h1X-RC-uLH"/>
+                <outlet property="buyBtn" destination="Fph-g8-pOc" id="DDs-yH-htP"/>
+                <outlet property="buyBtn_B" destination="myg-1P-nsh" id="Axc-Yy-AJs"/>
                 <outlet property="changePass" destination="gzH-29-mGR" id="MwU-Az-1hb"/>
+                <outlet property="des" destination="Rqs-V2-2fq" id="UmC-BH-xcl"/>
+                <outlet property="des_B" destination="iY4-Mq-eKc" id="cMa-BA-eCZ"/>
                 <outlet property="email" destination="BMz-x9-Xwe" id="s2h-Ku-Q2f"/>
                 <outlet property="headerCell" destination="sta-gZ-zj5" id="zga-zc-jdk"/>
                 <outlet property="inforCell" destination="yUj-V0-3Qa" id="6cZ-HS-1N7"/>
@@ -31,6 +35,8 @@
                 <outlet property="transaction_S" destination="cws-h4-Lbp" id="KYP-n9-OWJ"/>
                 <outlet property="userName" destination="ydk-pe-AEF" id="Aqa-RD-Isa"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="vipIcon" destination="x7A-k9-A1m" id="jgC-pz-Ny2"/>
+                <outlet property="vipIcon_B" destination="u8X-gW-R9p" id="QgE-oi-U9S"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -55,7 +61,7 @@
                                 <constraint firstAttribute="width" constant="44" id="RWY-2o-CQr"/>
                                 <constraint firstAttribute="height" constant="44" id="xwn-dK-TDh"/>
                             </constraints>
-                            <state key="normal" image="ic_menu"/>
+                            <state key="normal" image="ico_menu"/>
                             <connections>
                                 <action selector="didPressMenu" destination="-1" eventType="touchUpInside" id="yEV-ks-BGB"/>
                             </connections>
@@ -175,10 +181,10 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_vip" translatesAutoresizingMaskIntoConstraints="NO" id="x7A-k9-A1m">
-                                <rect key="frame" x="140" y="40" width="30" height="30"/>
+                                <rect key="frame" x="135" y="35" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="8kY-Gm-LPX"/>
-                                    <constraint firstAttribute="width" constant="30" id="IdH-5j-M7W"/>
+                                    <constraint firstAttribute="height" constant="40" id="8kY-Gm-LPX"/>
+                                    <constraint firstAttribute="width" constant="40" id="IdH-5j-M7W"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -191,8 +197,8 @@
                             <constraint firstAttribute="width" constant="220" id="TCf-aS-ATj"/>
                             <constraint firstItem="VWS-9P-tOy" firstAttribute="centerY" secondItem="31X-kY-9bH" secondAttribute="centerY" id="Vsu-Vk-JUB"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="220" id="XsW-7Q-zZe"/>
-                            <constraint firstAttribute="trailing" secondItem="x7A-k9-A1m" secondAttribute="trailing" constant="50" id="hPL-tE-v3R"/>
-                            <constraint firstItem="x7A-k9-A1m" firstAttribute="top" secondItem="31X-kY-9bH" secondAttribute="top" constant="40" id="iJL-u2-JXT"/>
+                            <constraint firstAttribute="trailing" secondItem="x7A-k9-A1m" secondAttribute="trailing" constant="45" id="hPL-tE-v3R"/>
+                            <constraint firstItem="x7A-k9-A1m" firstAttribute="top" secondItem="31X-kY-9bH" secondAttribute="top" constant="35" id="iJL-u2-JXT"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="220" id="wRp-S7-pyb"/>
                         </constraints>
                     </view>
@@ -229,7 +235,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jrr-hX-61f">
                         <rect key="frame" x="0.0" y="315.5" width="200" height="130"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="35 cuốn" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXA-U6-deV">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXA-U6-deV">
                                 <rect key="frame" x="8" y="88" width="184" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
@@ -249,7 +255,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71Z-kv-xhp">
                         <rect key="frame" x="214" y="315.5" width="200" height="130"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1200 giờ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ja-RY-Bhv">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ja-RY-Bhv">
                                 <rect key="frame" x="8" y="88" width="184" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
@@ -735,12 +741,12 @@
     <resources>
         <image name="bg_login-1" width="266.5" height="136.5"/>
         <image name="ic_avatar" width="116.5" height="116.5"/>
-        <image name="ic_menu" width="33" height="33"/>
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_book" width="80" height="79.5"/>
         <image name="ico_camera" width="47.5" height="47.5"/>
         <image name="ico_edit" width="31.5" height="31.5"/>
         <image name="ico_glass" width="80" height="79.5"/>
+        <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
