--- a/Left_Menu_/TG_Intro_ViewController.xib
+++ b/Left_Menu_/TG_Intro_ViewController.xib
@@ -12,10 +12,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TG_Intro_ViewController" customModule="MeBook" customModuleProvider="target">
             <connections>
                 <outlet property="avatar" destination="hqr-8h-tDc" id="kul-ok-BrH"/>
+                <outlet property="buyBtn" destination="4xK-pA-qhv" id="io2-sa-Rcu"/>
                 <outlet property="phoneNo" destination="Nio-bG-Y4A" id="yHf-Kh-6Hv"/>
                 <outlet property="tableView" destination="BdG-F7-GTQ" id="9Tn-Wc-sbN"/>
                 <outlet property="userName" destination="e5B-Ou-Lo5" id="58D-Vz-u9g"/>
                 <outlet property="view" destination="52Q-bo-5Na" id="rCF-fV-Qx5"/>
+                <outlet property="vipIcon" destination="U2a-eu-b3j" id="vfG-fT-w5x"/>
+                <outlet property="widthBuyBtn" destination="9nh-FB-1Rp" id="1Qt-d6-Jaw"/>
                 <outlet property="widthConstant" destination="GKl-oQ-Vps" id="UsM-S9-6Gj"/>
             </connections>
         </placeholder>
@@ -48,11 +51,11 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nio-bG-Y4A">
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nio-bG-Y4A">
                                     <rect key="frame" x="106" y="83" width="145" height="21"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="21" id="EIq-12-Rn7"/>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="EIq-12-Rn7"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -151,7 +154,7 @@
         </view>
     </objects>
     <resources>
-        <image name="btn_upgrade" width="55.5" height="89"/>
+        <image name="btn_upgrade" width="49.5" height="78.5"/>
         <image name="ic_avatar" width="116.5" height="116.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
         <systemColor name="systemBackgroundColor">
